--- a/src/pages/ChannelsDetail/components/ChannelsShort/style.scss
+++ b/src/pages/ChannelsDetail/components/ChannelsShort/style.scss
@@ -4,25 +4,25 @@
     border-radius: 24px;
     background: rgba(0, 0, 0, 0.24);
     height: fit-content;
-  
+
     .wrapper {
       position: relative;
       cursor: pointer;
     }
-  
+
     .shortCard-content:hover {
       opacity: 1;
     }
-  
+
     .shortCard-content > * {
       transform: translateY(0);
       transition: all 0.5s;
     }
-  
+
     .shortCard-content:hover > * {
       transform: translateY(0);
     }
-  
+
     .shortCard-content {
       width: 100%;
       height: 100%;
@@ -35,22 +35,24 @@
       opacity: 0;
       transition: all 0.5s;
       border-radius: 24px;
-  
+
       .text {
-        position: absolute;
-        left: 15px;
-        bottom: 10px;
-  
+        //position: absolute;
+        //left: 15px;
+        //bottom: 10px;
+        padding: 0 0 15px 10px;
+
         p {
-          overflow: hidden;
+          //overflow: hidden;
           color: var(--Neutral-White, #fff);
-          text-overflow: ellipsis;
+          //text-overflow: ellipsis;
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
           line-height: 24px;
+          word-wrap: break-word;
         }
-  
+
         span {
           color: #fff;
           font-size: 24px;
@@ -60,7 +62,7 @@
         }
       }
     }
-  
+
     .main {
       width: 100% !important;
       height: 430px;
@@ -68,7 +70,7 @@
       border-radius: 24px;
       overflow: hidden;
       position: relative;
-  
+
       .coverImage,
       .video {
         width: 100% !important;
@@ -80,19 +82,19 @@
         left: 0;
         object-fit: cover;
       }
-  
+
       // .coverImage.hidden {
       //   opacity: 0;
       // }
     }
   }
-  
-  
-  
+
+
+
   .channels_shortcard {
     position: relative;
     width: 100%;
-  
+
     .menu-icon {
       position: absolute;
       top: 10px;
@@ -102,7 +104,7 @@
       color: white;
       cursor: pointer;
     }
-  
+
     .menu {
       position: absolute;
       top: 40px;
@@ -120,7 +122,7 @@
       transform: translateY(-20px);
       visibility: hidden;
       transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s 0.3s;
-  
+
       button {
         width: 100%;
         padding: 8px 16px;
@@ -129,13 +131,13 @@
         background: none;
         border: none;
         cursor: pointer;
-  
+
         &:hover {
           background-color: #23272e;
         }
       }
     }
-  
+
     .open {
       opacity: 1;
       transform: translateY(0);
@@ -143,4 +145,3 @@
       transition: opacity 0.3s ease, transform 0.3s ease;
     }
   }
-  
