--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -1,8 +1,116 @@
+.chat__modal{
+  .ant-modal-content{
+    padding: 34px;
+  }
+}
+.search__user {
+  flex: 1;
+  position: relative;
+  padding: 0 0 10px 0;
+
+  .search__result {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    left: 0;
+    background: #23272e;
+    border-radius: 16px;
+    max-height: 0;
+    transition: all .3s ease-in-out;
+    overflow: hidden;
+    z-index: 888;
+    &.isOpen{
+      max-height: 280px;
+      padding: 8px;
+    }
+    h5{
+      text-align: center;
+      margin: 0;
+      padding: 5px;
+      font-size: 16px;
+      color: #fff;
+    }
+    .emptySearch{
+      display: none;
+    }
+  }
+  
+  ul {
+
+    color: #fff;
+    padding: 0 8px;
+    list-style: none;
+    max-height: 280px;
+    overflow: auto;
+    cursor: pointer;
+
+    .use__item {
+      display: flex;
+      align-items: center;
+      margin: 15px 0;
+      gap: 15px;
+      transition: all .3s ease-in-out;
+      padding: 8px 12px;
+      border-radius: 14px;
+
+      &:hover {
+        background: #0f0f0f;
+      }
+
+      img {
+        max-width: 50px;
+        height: 50px;
+        border-radius: 50%;
+      }
+
+      .user__info {
+        h4 {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
+
 .chat_section {
   width: 100%;
   height: auto;
   padding: 14px 0;
   transition: all 0.3s ease;
+  input {
+    display: flex;
+    width: 100%;
+    padding: 10px 18px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 16px;
+    border: 1px solid var(--Gray-400, #292929);
+    background-color: transparent;
+    outline: none;
+    color: var(--Gray-300, #525252);
+  
+    /* Poppins/16/Medium */
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+  }
+  
+  button {
+    display: flex;
+    padding: 14px 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 16px;
+    border: 1px solid var(--Text-11, #23272e);
+    background-color: transparent;
+  }
+
   .empty__message{
     
     display: flex;
@@ -245,6 +353,22 @@
         background: var(--Text-12, #1b1d23);
       }
     }
+    .chat__title{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button{
+        background: #0385CA;
+        border-radius: 16px;
+        border: 0;
+        width: 48px;
+        height: 48px;
+        transition: all .3s ease-in-out;
+        &:hover{
+          box-shadow: 0 0 5px #0385CA;
+        }
+      }
+    }
 
     h1 {
       color: #fff;
@@ -257,6 +381,11 @@
       /* 128.571% */
     }
   }
+  
+    .ant-modal-wrap{
+      z-index: 99999 !important;
+      backdrop-filter: blur(10px) !important;
+    }
   
 
   .chat_messages_header {
@@ -303,6 +432,40 @@
       display: flex;
       align-items: center;
       gap: 10px;
+      ul{
+        padding: 0;
+        list-style: none;
+      }
+      & > ul{
+        position: relative;
+      }
+      a{
+        display: inline-block;
+      }
+      
+      .chat__options{
+        margin: 0;
+        &:hover ul{
+          right: 0;
+          opacity: 1;
+        }
+        ul{
+          background: #0f0f0f;
+          padding: 15px 25px;
+          position: absolute;
+          top: 120%;
+          right: -300%;
+          border-radius: 16px;
+          border: 1px solid #525252;
+          transition: all .4s ease-in-out;
+          opacity: 0;
+        }
+        button{
+          border-radius: 16px;
+          color: #fff;
+
+        }
+      }
 
       a {
         display: flex;
@@ -510,18 +673,21 @@
 .chat_messages::-webkit-scrollbar-thumb:window-inactive {
   background: #a2a8b7;
 }
-.back__top{
+button.back__top{
   display: none;
 }
+
 
 @media only screen and (width < 990px) {
   
   .back__top{
     display: flex;
+    justify-content: start;
+    padding: 0;
     background: transparent;
     border: 0;
     outline: 0;
-    margin: 15px 0 24px 0;
+    margin: 25px 0 24px 0;
   }
   .hide__chats{
     display: none;
@@ -566,3 +732,53 @@
     opacity: 1;
   }
 }
+
+
+
+/*NICK ICONS BTNS*/
+
+
+.button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  gap: 2px;
+}
+
+.svgIcon {
+  width: 10px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.button:hover {
+  transition-duration: 0.3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+  gap: 0;
+}
+
+.bin-top {
+  transform-origin: bottom right;
+}
+.button:hover .bin-top {
+  transition-duration: 0.5s;
+  transform: rotate(160deg);
+}
+
+/*------END--------*/
