--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -9,9 +9,9 @@
 
  
 }
-// .ant-btn{
-//   display: none;
-// }
+.modal__body .ant-btn{
+  display: none;
+}
 // .ant-modal-close{
 //   svg{
 //     fill: #ffffff;
@@ -300,6 +300,9 @@
 
   .container {
     cursor: pointer;
+    input{
+      opacity: 0;
+    }
   }
   
   // .container input {
