--- a/src/pages/Chat/style.scss
+++ b/src/pages/Chat/style.scss
@@ -34,6 +34,30 @@
       display: none;
     }
   }
+  .ant-modal-close{
+    fill: #fff;
+  }
+  input {
+    display: flex;
+    width: 100%;
+    padding: 10px 18px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 16px;
+    border: 1px solid var(--Gray-400, #292929);
+    background-color: transparent;
+    outline: none;
+    color: var(--Gray-300, #525252);
+
+    /* Poppins/16/Medium */
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+  }
   
   ul {
 
