--- a/src/components/ShortCard/style.scss
+++ b/src/components/ShortCard/style.scss
@@ -36,17 +36,27 @@
     opacity: 0;
     transition: all 0.5s;
     border-radius: 16px;
-
+    .price{
+      position: absolute ;
+      top: 13px ;
+      left: 10px ;
+      color: white;
+      font-size: 14px;
+      background-color: #0087CC;
+      padding: 5px 15px;
+      border-radius: 15px;
+    }
     .text {
-      position: absolute;
-      left: 15px;
-      bottom: 10px;
+     
 
       p {
+        position: absolute;
+        left: 15px;
+        bottom: 30px;
         overflow: hidden;
         color: var(--Neutral-White, #fff);
         text-overflow: ellipsis;
-        font-size: 15px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 400;
         // line-height: 24px;
@@ -54,12 +64,18 @@
       }
 
       span {
+        position: absolute;
+        left: 15px;
+        bottom: 10px;
         color: #fff;
-        font-size: 17px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 400;
         // line-height: 32px;
+        
       }
+
+     
     }
   }
 
