send change  // input{     //   opacity: 0;     // }

--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -300,9 +300,9 @@
 
   .container {
     cursor: pointer;
-    input{
-      opacity: 0;
-    }
+    // input{
+    //   opacity: 0;
+    // }
   }
   
   // .container input {
