--- a/src/pages/Home/components/FeaturedVideo/style.scss
+++ b/src/pages/Home/components/FeaturedVideo/style.scss
@@ -18,7 +18,7 @@
         width: 100%;
         height: 100%;
         border-radius: 12px;
-        object-fit: cover;
+        // object-fit: cover;
       }
     }
 
