--- a/src/pages/LiveSteem/style.scss
+++ b/src/pages/LiveSteem/style.scss
@@ -67,8 +67,9 @@
             border-radius: 16px;
         }
 
-        h1 {
-            font-size: clamp(24px, 3vw, 28px);
+        h4 {
+            font-size: 21px;
+            font-weight: 400;
         }
     }
     .live__icon {
