--- a/src/pages/Profile/pages/LikedVideos/style.scss
+++ b/src/pages/Profile/pages/LikedVideos/style.scss
@@ -62,4 +62,31 @@
             height: 20px;
         }
     }
+
+    .custom-select {
+        .ant-select {
+          width: 250px;
+          background-color: #0f0f0f !important;
+          height: 50px;
+          text-align: center;
+    
+          .ant-select-selector {
+            background-color: transparent !important;
+            color: white;
+            padding: 16px 20px;
+            border-radius: 16px;
+            border: 1px solid #23272e;
+            display: flex;
+            /* Flexbox kullanarak içeriği yatay hizalama */
+            align-items: center;
+            /* İçeriği dikeyde ortala */
+            justify-content: space-between;
+            /* İçeriği yatayda sağa doğru uzat */
+          }
+    
+          .ant-select-selection-item {
+            color: white;
+          }
+        }
+      }
 }
