--- a/src/pages/ChannelsDetail/components/Main/style.scss
+++ b/src/pages/ChannelsDetail/components/Main/style.scss
@@ -87,8 +87,17 @@
                 font-weight: 400;
                 line-height: 24px;
                 /* 150% */
+                &.unsubs-button {
+                    background-color: transparent;
+                    border: 1px solid var(--Text-11, #23272E);
+                    color: var(--Text-4, #A2A8B7);
+                  }
             }
         }
+        
     }
 
 }
+
+
+
