--- a/src/pages/Profile/pages/Favorites/style.scss
+++ b/src/pages/Profile/pages/Favorites/style.scss
@@ -97,6 +97,9 @@
 
 @media only screen and (width < 560px) {
     .favorites_profile {
+        h1{
+            font-size: 20px;
+        }
         .custom-select {
             .ant-select {
                 width: initial;
