--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -103,6 +103,7 @@
     .video__item{
       display: flex;
       justify-content: space-between;
+      align-items: center;
       background: #16181D;
       padding: 12px;
       border-radius: 24px;
@@ -136,7 +137,8 @@
       }
       .cover__img{
         flex: 0;
-       
+        max-width: 200px;
+      position: static;
       }
       
     }
@@ -308,7 +310,11 @@
   // .container input {
   //   display: none;
   // }
-  
+  .video__checkbox{
+    input{
+      opacity: 0;
+    }
+  }
   .container svg {
     overflow: visible;
   }
