--- a/src/pages/ProductDetail/style.scss
+++ b/src/pages/ProductDetail/style.scss
@@ -649,7 +649,29 @@
     font-size: 16px;
     color: #fff;
   }
+  .mapboxgl-map{
+    
+    .mapboxgl-canvas-container{
+      overflow: hidden;
+
+     canvas{
+      height: 100% !important;
+      border-radius: 16px;
+      overflow: hidden;
+     }
+    }
+   
+    .mapboxgl-ctrl{
+      display: none;
+    }
+  }
 }
+
+.address__map{
+  display: flex;
+  height: 250px;
+}
+
 
 @media (max-width: 485px) {
   .product_detail {
