--- a/src/pages/LiveSteem/style.scss
+++ b/src/pages/LiveSteem/style.scss
@@ -6,7 +6,9 @@
         display: flex;
         flex-direction: column;
         padding: 5px 0 35px 0;
-
+        label > p{
+            margin: 10px 0;
+        }
         input {
             width: 100%;
             padding: 12px 20px;
@@ -77,6 +79,67 @@
 //             font-weight: 400;
 // >>>>>>> master
         }
+    }
+}
+.select__video{
+    margin:0 0 15px 0;
+    height: auto;
+    width: 100%;
+    .ant-select-selector{
+        background: transparent !important;
+        color: #fff;
+        border: 1px solid #23272E !important;
+        padding: 12px 20px !important;
+        border-radius: 16px !important;
+        .ant-select-selection-placeholder{
+            color: #ffffff8a;
+        }
+        .ant-select-selection-search{
+            display: none !important; 
+        }
+
+    }
+    div.ant-select-item-option-active{
+        background: #23272E !important;
+
+    }
+    .ant-select-selection-item{
+        padding: 0 !important;
+        .select__video__item{
+            background: #23272E;
+
+        }
+    }
+
+    
+}
+
+:where(.css-dev-only-do-not-override-1okl62o).ant-select-single.ant-select-open .ant-select-selection-item .select__video__item{
+    color: #ffffffd6 !important;
+}
+
+.select__video__item{
+    padding: 15px 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 6px;
+    transition: all .4s ease-in-out;
+    img{
+        max-width: 100px;
+        width: 100%;
+        height: 70px;
+        object-fit: cover;
+        border-radius: 16px;
+        margin: 0 15px 0 0;
+    }
+    &:hover{
+        background: #23272E;
+    }
+    h5{
+        font-size: 16px;
+    }
+    h6{
+        font-size: 12px;
     }
 }
 
