--- a/src/pages/LiveSteem/style.scss
+++ b/src/pages/LiveSteem/style.scss
@@ -110,10 +110,13 @@
 
         }
     }
+   
 
     
 }
-
+.ant-select-item-group{
+    display: none !important;
+}
 :where(.css-dev-only-do-not-override-1okl62o).ant-select-single.ant-select-open .ant-select-selection-item .select__video__item{
     color: #ffffffd6 !important;
 }
