--- a/src/components/PChannel/style.scss
+++ b/src/components/PChannel/style.scss
@@ -122,6 +122,7 @@
       font-style: normal;
       font-weight: 600;
       line-height: 24px;
+      min-width: 151px;
       margin-right: 10px;
       border: none;
     }
